--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SplashScreen</string>
+    <string name="logo_splash_screen">Logo do splash screen</string>
 </resources>
